# linux-wall-launcher

./: README.md  launcher  lumaq  pyproject.toml
assets/: lumaq.desktop  wall-launcher.desktop
src/linux_wall_launcher/: app.py  backends.py  config.py  main.py  preview.py  styles.py
src/lumaq/: app.py  apps.py  config.py  keys.py  main.py  preview.py  styles.py  toggle.py
