[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumaq"
version = "0.2.2"
description = "GTK launcher with wallpaper and video-wallpaper switching for Linux desktops"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "milord-x" }
]
keywords = ["gtk", "launcher", "linux", "wallpaper", "mpvpaper", "swww"]
classifiers = [
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.gui-scripts]
lumaq = "lumaq.main:main"

[project.scripts]
lumaq-toggle = "lumaq.toggle:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
